--- a/css/g1.css
+++ b/css/g1.css
@@ -20,7 +20,7 @@
   display: none;
   width: 250px;
   left: 43%;
-  top:35%;
+  top:39%;
 }
 .showtime{
   font-size: 25px;
@@ -69,6 +69,9 @@ input{
 #bar{
     display: none;
     width: 400px;
-    height: 200px;
+    height: 250px;
     text-align: center;
+    position: absolute;
+    bottom: 10%;
+    left: 20%;
 }
