--- a/css/g1.css
+++ b/css/g1.css
@@ -75,3 +75,12 @@ input{
     bottom: 10%;
     left: 20%;
 }
+#bar2{
+    display: none;
+    width: 400px;
+    height: 250px;
+    text-align: center;
+    position: absolute;
+    bottom: 10%;
+    right: 13%;
+}
